<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/lay1"
            android:padding="10dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/recdri"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/recmer"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/merchantchart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/titlcaf"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="50dp"
                android:textSize="40dp"
                android:textColor="@color/usc_red"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/caffeine_assesment"/>
            <TextView
                android:id="@+id/avgcaf"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay1"
            android:orientation="vertical">
            <ListView
                android:id="@+id/listoforders"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:nestedScrollingEnabled="true"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
