<resources>
    <string name="app_name">USCDoorDrink</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoic2lsdmVyZGV2ZWxvcGVyIiwiYSI6ImNsMGcwaTNiazB4eGszYnFzOWJ6bzF2MDUifQ.PYJ-f44MpFxWOaWZAsYd0A</string>
    <string name="user_location_permission_explanation">Please enable location permissions for this app</string>
    <string name="default_web_client_id_">15055657048-b8vuf1eql55tru3416p26ukc13pk89ah.apps.googleusercontent.com</string>
    <string name="sign_in_m">Sign in as a Merchant</string>
    <string name="sign_in_c">Sign in as a Customer</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_account_failed">Associate a Google account with this device</string>
    <string name="navMapPageTitle">Map</string>
    <string name="navSettingsPageTitle">Settings</string>
    <string name="navPlotScreen">Plot Screen</string>
    <string name="navDeliveryList">Delivery List</string>
    <string name="navDeliveryStatus">Delivery Status</string>
    <string name="navLogout">Log Out</string>
    <string name="settingsUserName">Name</string>
    <string name="add_menu">Add Menu</string>

    <string name="delete_drink_alert_title">Delete Drink?</string>
    <string name="about_to_delete_drink">Are you sure about that?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="caffeine_assesment">Caffeine Assessment</string>

    <string name="testingText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_delivery_status">DeliveryStatusActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history_str">History</string>

</resources>