...
        android:layout_height="wrap_content"
        android:text="Select Range:"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp" />
</LinearLayout>
