<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deliveryListPageRowHeaderInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deliveryListPageRowExpandButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:icon="@drawable/ic_baseline_expand_more_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deliveryListPageRowHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="10dp"
            android:text="Sent At: 3:24 pm"
            android:textSize="20dp"
            app:layout_constraintLeft_toRightOf="@id/deliveryListPageRowExpandButton"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/deliveryListPageRowDeliveryOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deliveryListPageRowDeliveryInitialOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="visible"
                android:paddingRight="2dp"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/deliveryListPageRowDeliveryAcceptDeliveryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="Accept"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/deliveryListPageRowDeliveryRejectDeliveryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    app:layout_constraintLeft_toRightOf="@id/deliveryListPageRowDeliveryAcceptDeliveryButton"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Reject"
                    android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/deliveryListPageRowDeliveryDeliverDeliveryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Mark Delivered"
                android:layout_marginRight="2dp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/holo_blue_dark"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deliveryListPageRowExtraInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliveryListPageRowHeaderInfo">

        <TextView
            android:id="@+id/deliveryListPageRowExtraInformationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="Status: Pending\nTo: Los Angeles, CA 90007\nDrink #1, 2\nDrink #1, 2\nDrink #1, 2\nDrink #1, 2\nDrink #1, 2\nDrink #1, 2\nDrink #1, 2"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>