...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border_radius_button"
                    android:text="@string/sign_in_c" />

                <Button
                    android:id="@+id/signInButtonMerchant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border_radius_button"
...
