...
        android:title="@string/navDeliveryList" />
    <item
        android:id="@+id/historyscreen"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/history_str" />
    <item
        android:id="@+id/navSettingsPage"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/navSettingsPageTitle" />
    <item
        android:id="@+id/navLogout"
        android:icon="@drawable/ic_baseline_keyboard_return_24"
        android:title="@string/navLogout" />
...
